# dog_ws

./: .gitignore  LICENSE  README.md  指令  规划.md
dog_bringup/: CMakeLists.txt  package.xml
dog_bringup/config/: dog.rviz  dog.world  robot_controllers.yaml
dog_bringup/config/description/: reference.info  task.info
dog_bringup/launch/: sim.launch.py
dog_bringup/msg/: BaseState.msg  DogState.msg  LegState.msg  SystemMonitor.msg
dog_bringup/urdf/: const.xacro  dog.urdf  dog.xacro  leg.xacro  ros2_control.xacro
dog_bringup/xacro/: dog.urdf  dog.xacro  leg.xacro
dog_controllers/: CMakeLists.txt  dog_controllers.xml  package.xml
dog_controllers/demo/: KalmanFilterEstimator.hpp  demo.cpp  note.c
dog_controllers/demo/include/legged_wbc/: HierarchicalWbc.h  HoQp.h  Task.h  WbcBase.h  WeightedWbc.h
dog_controllers/demo/src/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
dog_controllers/include/dog_controllers/: TargetTrajectoriesPublisher.h  dog_data_bridge.hpp  dog_nmpc_wbc_controller.hpp
dog_controllers/include/dog_controllers/common/: debug_manager.hpp  dog_data_bridge.hpp  dog_interface.hpp
dog_controllers/include/dog_controllers/nmpc/: NmpcController.hpp
dog_controllers/include/dog_controllers/nmpc_ocs2_legged_robot/: LeggedRobotInterface.h  LeggedRobotPreComputation.h
dog_controllers/include/dog_controllers/nmpc_ocs2_legged_robot/common/: utils.h
dog_controllers/include/dog_controllers/nmpc_ocs2_legged_robot/constraint/: FrictionConeConstraint.h  NormalVelocityConstraintCppAd.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
dog_controllers/include/dog_controllers/nmpc_ocs2_legged_robot/cost/: LeggedRobotQuadraticTrackingCost.h
dog_controllers/include/dog_controllers/nmpc_ocs2_legged_robot/dynamics/: LeggedRobotDynamicsAD.h
dog_controllers/include/dog_controllers/nmpc_ocs2_legged_robot/foot_planner/: SplineCpg.h  SwingTrajectoryPlanner.h
dog_controllers/include/dog_controllers/nmpc_ocs2_legged_robot/gait/: GaitKeyboardPublisher.h  GaitReceiver.h  GaitSchedule.h  LegLogic.h  ModeSequenceTemplate.h  ModeSequenceTemplateRos.h  MotionPhaseDefinition.h
dog_controllers/include/dog_controllers/nmpc_ocs2_legged_robot/initialization/: LeggedRobotInitializer.h
dog_controllers/include/dog_controllers/nmpc_ocs2_legged_robot/reference_manager/: SwitchedModelReferenceManager.h
dog_controllers/include/dog_controllers/nmpc_ocs2_legged_robot/visualization/: LeggedRobotVisualizer.h
dog_controllers/include/dog_controllers/ocs2_legged_robot/: LeggedRobotInterface.h  LeggedRobotPreComputation.h
dog_controllers/include/dog_controllers/ocs2_legged_robot/common/: utils.h
dog_controllers/include/dog_controllers/ocs2_legged_robot/constraint/: FrictionConeConstraint.h  NormalVelocityConstraintCppAd.h  ZeroForceConstraint.h  ZeroVelocityConstraintCppAd.h
dog_controllers/include/dog_controllers/ocs2_legged_robot/cost/: LeggedRobotQuadraticTrackingCost.h
dog_controllers/include/dog_controllers/ocs2_legged_robot/dynamics/: LeggedRobotDynamicsAD.h
dog_controllers/include/dog_controllers/ocs2_legged_robot/foot_planner/: SplineCpg.h  SwingTrajectoryPlanner.h
dog_controllers/include/dog_controllers/state_estimation/: KalmanFilterEstimator.hpp  StateEstimatorBase.hpp  TopicStateEstimator.hpp
dog_controllers/include/dog_controllers/wbc/: Task.h  WbcBase.hpp  WeightedWbc.hpp
dog_controllers/src/: TargetTrajectoriesPublisher.cpp  dog_data_bridge.cpp  dog_nmpc_wbc_controller.cpp
dog_controllers/src/common/: debug_manager.cpp  dog_data_bridge.cpp  dog_interface.cpp
dog_controllers/src/nmpc/: NmpcController.cpp
dog_controllers/src/nmpc_ocs2_legged_robot/: LeggedRobotInterface.cpp  LeggedRobotPreComputation.cpp
dog_controllers/src/nmpc_ocs2_legged_robot/common/: ModelSettings.cpp
dog_controllers/src/nmpc_ocs2_legged_robot/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
dog_controllers/src/nmpc_ocs2_legged_robot/dynamics/: LeggedRobotDynamicsAD.cpp
dog_controllers/src/nmpc_ocs2_legged_robot/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
dog_controllers/src/nmpc_ocs2_legged_robot/gait/: Gait.cpp  GaitKeyboardPublisher.cpp  GaitReceiver.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
dog_controllers/src/nmpc_ocs2_legged_robot/initialization/: LeggedRobotInitializer.cpp
dog_controllers/src/nmpc_ocs2_legged_robot/reference_manager/: SwitchedModelReferenceManager.cpp
dog_controllers/src/nmpc_ocs2_legged_robot/visualization/: LeggedRobotVisualizer.cpp
dog_controllers/src/ocs2_legged_robot/: LeggedRobotInterface.cpp  LeggedRobotPreComputation.cpp
dog_controllers/src/ocs2_legged_robot/common/: ModelSettings.cpp
dog_controllers/src/ocs2_legged_robot/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
dog_controllers/src/ocs2_legged_robot/dynamics/: LeggedRobotDynamicsAD.cpp
dog_controllers/src/ocs2_legged_robot/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
dog_controllers/src/ocs2_legged_robot/gait/: Gait.cpp  GaitKeyboardPublisher.cpp  GaitReceiver.cpp  GaitSchedule.cpp  LegLogic.cpp  ModeSequenceTemplate.cpp
dog_controllers/src/ocs2_legged_robot/initialization/: LeggedRobotInitializer.cpp
dog_controllers/src/ocs2_legged_robot/reference_manager/: SwitchedModelReferenceManager.cpp
dog_controllers/src/ocs2_legged_robot/visualization/: LeggedRobotVisualizer.cpp
dog_controllers/src/state_estimation/: KalmanFilterEstimator.cpp  StateEstimatorBase.cpp  TopicStateEstimator.cpp
dog_controllers/src/wbc/: WbcBase.cpp  WeightedWbc.cpp
dog_hardware/: CMakeLists.txt  dog_hardware.xml  package.xml
dog_hardware/include/dog_hardware/: dog_gazebo_hw.hpp
dog_hardware/src/: dog_gazebo_hw.cpp
dog_third_lib/ocs2_ros2/ocs2_robotic_assets/: CMakeLists.txt
dog_third_lib/qpoases_vendor/: CMakeLists.txt  package.xml
(+11 files in other folders)
