<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qpoases_vendor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2388995069@qq.com">cys</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>git</build_depend>
  <exec_depend>git</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
